--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ws:start": "tsx scripts/start-ws-server.ts"
   },
   "dependencies": {
+    "@alicloud/iot20180120": "^5.1.0",
+    "@alicloud/openapi-client": "^0.4.15",
     "@prisma/client": "^6.15.0",
     "@react-three/drei": "^10.7.5",
     "@react-three/fiber": "^9.3.0",
